--- a/app/public/wp-content/themes/como-temperar/style.css
+++ b/app/public/wp-content/themes/como-temperar/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Capetown
-Theme URI: https://capetown.com
+Theme Name: Como-temperar
+Theme URI: https://comotemperar.com
 Author: Iago Neves
-Author URI: https://capetown.com
+Author URI: https://comotemperar.com
 Description: Tema criado para Blog culinário.
 Requires at least: 6.4
 Tested up to: 6.6
@@ -10,17 +10,14 @@ Requires PHP: 7.0
 Version: 1.2
 */
 
-
 :root {
   --color-azul: #00A1D6; /* Azul oceano */
   --color-amarelo: #F9A825; /* Amarelo sol */
-  --color-salmao: #FF5733; /* Coral (para botões ou destaques) */
-  --color-azulclaro: #F0F8FF; /* Azul claro para fundo */
+  --color-coral: #FF5733; /* Coral (para botões ou destaques) */
+  --color-azul-claro: #F0F8FF; /* Azul claro para fundo */
   --color-cinza: #333333; /* Cor para textos principais */
-  --text-branco: #FFFFFF; /* Texto claro para fundos escuros */
-  --color-azulescuro: #0288D1; /* Azul mais escuro para hover em botões */
+  --color-azul-escuro: #0288D1; /* Azul mais escuro para hover em botões */
 }
-
 /* Reset */
 
 html, body, div, span, applet, object, iframe,
@@ -69,127 +66,112 @@ table {
 /* Reset End */
 
 
-body, a {
+body {
   font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, a {
   font-family: 'Montserrat', sans-serif;
 }
 
-.banner {
-  position: relative; /* Necessário para o pseudoelemento ::before */
-  background-image: url('img/condiment3.jpg'); /* Troque pela sua imagem */
-  background-size: cover; /* A imagem cobre todo o banner */
-  background-position: center; /* Centraliza a imagem */
-  height: 70vh; /* O banner ocupa 70% da altura da viewport */
-  display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
-  align-items: center; /* Centraliza verticalmente */
-  text-align: center;
-  color: white;
-  padding: 20px;
-}
-
-.banner::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Sombra escura semi-transparente */
-  z-index: 1; /* Overlay está abaixo do conteúdo */
-}
-
-.banner-content h1 {
-  font-size: 3rem; /* Tamanho da fonte grande para o título */
-  margin-bottom: 10px;
-  text-shadow: #FFFFFF 1px;
-}
-
-.banner-content p {
-  font-size: 1.2rem;
-}
-a {
-    text-decoration: none;
-}
-
 #header {
-    height: 4.5rem;
+    height: 5.5rem;
     padding: 1rem 2.5rem;
+    padding-left: 4rem;
     display:flex;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     background-color: var(--color-amarelo);
     margin: 0;
-    border-bottom: .5px solid black
+    border-bottom: 2px solid #dd9013;
 }
+
 
 #menu {
     display: flex;
     list-style: none;
-    gap: .5rem ;
 }
 
 #menu a {
     display: block;
     padding: .5rem;
     text-decoration: none;
-    font-size: 1rem;
-    color: #FFFFFF;
+    font-size: 1.rem;
+    color: var(--color-cinza);
+    font-weight: 200;
+}
+#menu a:hover {
+  transition: .4s;
+  color: var(--color-azul-escuro);
+}
+
+.svg-icone {
+  display:none;
+  margin-top: 30px;
 }
 
 #btn-mobile {
     display: none;
 }
 
+nav hr {
+  border: none; /* Remove a borda padrão */
+  height: 2px; /* Define a espessura da linha */
+  background-color: #666666; /* Define a cor da linha */
+  width: 30px; /* Define a largura da linha */
+  margin: auto; /* Adiciona espaço ao redor da linha */
+  visibility: hidden;
+  transition: .6s;
+}
+
 
     @media (max-width: 600px) {
 
-      #menu {
-        display: block;
-        position: absolute;
-        height: 0px;
-        width: 100%;
-        top: 4.5rem;
-        right: 0px;
-        text-align: center;
-        background-color: var(--color-cinza);
-        z-index: 1000;
-        transition: .6s;
-        visibility: hidden;
-        overflow-y: hidden;
-        margin: auto 0;
-        position: fixed;
-      }
-      #nav.active #menu {
-        height: calc(100vh - 4.5rem);
-        visibility: visible;
-        overflow-y: auto;;
-      }
-      #reserve {
-        padding-top: 30px;
-      }
-      #menu a {
-        font-weight: 300;
-        font-size: 1.4rem;
-        color: var(--color-amarelo);
-        padding: 1rem 0;
-        transition: .3s;
-      }
-
-        .hr-menu {
-          border: none; 
-          height: 2px; 
-          background-color: #505050; 
-          width: 40px; 
-          margin-top: -5px; 
+        #header {
+          padding-left: 3rem;
         }
-        
-        #menu a:hover {
-          font-size: 1.5rem;
+        #menu {
+          display: block;
+          position: absolute;
+          height: 0px;
+          width: 100%;
+          top: 5.5rem;
+          right: 0px;
+          text-align: center;
+          background-color: var(--color-cinza);
+          z-index: 1000;
+          transition: .6s;
+          visibility: hidden;
+          overflow-y: hidden;
+          margin: auto 0;
+        }
+        #nav.active #menu {
+          height: calc(100vh - 5.5rem);
+          visibility: visible;
+          overflow-y: auto;;
+        }
+
+        .svg-logo {
+          width: 163px;
+          height: 35px;
+        }
+
+        .svg-icone {
+          display: inline;
+          width: 65px;
+          height: 65px;
+        }
+
+        #menu a {
+          font-weight: 300;
+          font-size: 1.1rem;
+          color: var(--color-amarelo);
+          padding: 1.2rem 0;
+          transition: .3s;
+        }
+        .reserve-menu{
+          padding-top: 30px;
         }
 
         #nav.active #menu::-webkit-scrollbar {
@@ -208,22 +190,21 @@ a {
 
         #hamburguer {
           display: block;
-          border-top: 2.5px solid;
-          width: 27px;
+          border-top: 2px solid;
+          width: 25px;
           color: black;
         }
 
         #hamburguer::after, #hamburguer::before {
           content: '';
           display: block;
-          width: 27px;
+          width: 25px;
           height: 2px;
           background: currentColor;
           margin-top: 7px;
           transition: .3s;
         }
 
-        
         #nav.active #hamburguer {
         border-top-color: transparent;
         }
@@ -238,21 +219,10 @@ a {
         margin-top: -2px;
         }
 
-        .banner {
-          height: 25vh;
-          padding: 20px;
-        }
+        #nav.active hr {
+          transition: .6s;
+          visibility: visible;
+          overflow-y: visible;
 
-        .banner-content h1 {
-          font-size: 2rem;
-          z-index: 1000;
         }
-        .banner-content p {
-          font-size: 1rem;
-        }
-        .responsive-svg {
-          width: 163.1px; 
-          height: 35px; 
-        }
-
     }
